Styles cleanup and fixes, little work on protected pages

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,12 +9,13 @@
   <link rel="icon" href="favicon.ico" />
   <link rel="shortcut icon" href="favicon.ico" />
   <link rel="apple-touch-icon" href="apple-touch-icon.png" />
-  <title>Coffe United People (CUP)</title>
+  <title>Coffee United People (CUP)</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <script src="https://kit.fontawesome.com/17b4039aee.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
